# coderetreat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  rules.cpp  rules.h
test/: CMakeLists.txt  test_rules.cpp
